kubernetes/gabernetes/apps/seerr/resources/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: ingress-seerr
spec:
  endpointSelector:
    matchLabels:
      policy.gabe565.com/ingress-seerr: "true"
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: seerr
            app.kubernetes.io/name: seerr
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-seerr
spec:
  endpointSelector:
    matchLabels:
      policy.gabe565.com/egress-seerr: "true"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: seerr
            app.kubernetes.io/name: seerr
      toPorts:
        - ports:
            - port: "5055"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: seerr
  namespace: seerr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: seerr
  egress:
    - toEndpoints:
        - matchLabels:
            policy.gabe565.com/ingress-seerr: "true"
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
  ingress:
    - fromEndpoints:
        - matchLabels:
            policy.gabe565.com/egress-seerr: "true"
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
